# TravelPacker

./: .dockerignore  .env.docker  .env.example  .gitignore  ALEMBIC_IMPLEMENTATION.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY_AUDIT.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  test_logging.py  web_app.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  dependabot-auto-merge.yml  dependency-review.yml  normalize-password-nullability.yml  secret-scanning.yml
alembic/: README.md  env.py
alembic/versions/: 36a04cd7adbc_initial_schema_with_users_trips_.py  add_actually_used_column.py
data/: README.md
docker/: README.md  postgres-init.sql  redis.conf
docs/: INDEX.md  INDEX.md.backup  README.md  REPOSITORY_STRUCTURE_PROPOSAL.md  STRUCTURE_QUICK_SUMMARY.md
docs/architecture/: database-design.md  performance.md  web-interface.md
docs/features/: ai-cache-invalidation.md  ai-caching.md  ai-suggestions.md  dark-mode.md  google-oauth.md  google-signin.md  pdf-export.md  smart-packing.md  templates.md  weather-integration.md
docs/getting-started/: authentication.md  quick-start.md
docs/implementation/: AI_CACHING_ENHANCEMENT.md  authentication-setup.md  (+11 more)
logs/: README.md
reports/: README.md
scripts/: db_migrate.py
src/: __init__.py  app.py  config.py  extensions.py  factory.py  validators.py
templates/: base.html  index.html  login.html  new_trip.html  new_trip_from_template.html  register.html  view_trip.html
tests/: __init__.py  conftest.py
workflows/: security-scan.yml
(+82 files in other folders)
