[project]
name = "niknotes"
version = "0.1.0"
description = "AI-powered trip packing assistant"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults (Flask patterns)
    "RUF012",  # mutable class attributes (used in Flask config)
    "UP007",   # use X | Y for union types (keep Optional for readability)
    "SIM108",  # ternary operator (if/else with comments is more readable)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["T20", "B011"]  # allow print and assert in tests
"scripts/**/*.py" = ["T20", "E402"]  # allow print and late imports in scripts
"alembic/**/*.py" = ["E402"]        # allow late imports in migrations
"test_*.py" = ["T20", "F841"]       # allow print and unused vars in test scripts

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src --cov-report=html:reports/coverage/htmlcov --cov-report=term-missing"
